Add doc and proper readme.

--- a/app/_config/default-records.yml
+++ b/app/_config/default-records.yml
@@ -47,3 +47,20 @@ Dog:
 SilverStripe\Security\Group:
   extensions:
     - DefaultGroupExtension
+  default_groups:
+    - Title: Dog Managers
+      Description: Can administer dogs
+      Permissions:
+        - DOG_EDIT
+        - DOG_VIEW
+        - BREED_VIEW
+        - CMS_ACCESS_DogAdmin
+    - Title: Breed Managers
+      Description: Can administer dogs and dog breeds
+      Permissions:
+        - BREED_EDIT
+        - BREED_VIEW
+        - DOG_EDIT
+        - DOG_VIEW
+        - CMS_ACCESS_DogAdmin
+        - CMS_ACCESS_ReportAdmin
