--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -15,6 +15,11 @@ jobs:
       with:
         php-version: 7.3
         extension-csv: mbstring, xdebug
+        
+    - name: versions of everything
+      run: |
+        composer -V
+        php -v
     
     - name: Install composer dependencies
       run: |
