--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -18,13 +18,13 @@ jobs:
         
     - name: versions of everything
       run: |
-        composer -V && |
+        composer -V &&
         php -v
     
     - name: Install composer dependencies
       run: |
-        composer validate && |
-        composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update && |
+        composer validate &&
+        composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update &&
         composer install --prefer-source --no-interaction --optimize-autoloader
 #        composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
         
