--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -17,11 +17,13 @@ jobs:
         extension-csv: mbstring, xdebug
         
     - name: versions of everything
+      shell: powershell
       run: |
         composer -V
         php -v
     
     - name: Install composer dependencies
+      shell: powershell
       run: |
         composer validate
         composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update
