--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -27,8 +27,7 @@ jobs:
       run: |
         composer validate
         composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update
-        composer install --prefer-source --no-interaction --optimize-autoloader
-#        composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
+        composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
         
     - name: Print composer package list
       run: composer show
