--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -26,8 +26,9 @@ jobs:
       shell: powershell
       run: |
         composer validate
-        composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update --quiet  2>&1
-        &{ composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile  --quiet }
+        composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update --quiet 2>&1
+        composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile  --quiet 2>&1
+        echo $?
         
     - name: Print composer package list
       run: composer show
