--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -24,11 +24,13 @@ jobs:
     
     - name: Install composer dependencies
       shell: powershell
-      run: |
-        composer validate
+      run: composer validate
         composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update
         composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
-        echo $?
+    - shell: powershell
+      run: composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update
+    - shell: powershell
+      run: composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
         
     - name: Print composer package list
       run: composer show
