--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -27,7 +27,7 @@ jobs:
       run: composer validate
       
     - shell: powershell
-      run: composer require silverstripe/recipe-testing:^1 silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update
+      run: composer require silverstripe/recipe-testing:1.x-dev silverstripe/recipe-core:4.4.x-dev silverstripe/versioned:1.4.x-dev --no-update
     - shell: powershell
       run: composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
         
