--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -14,7 +14,7 @@ jobs:
       uses: shivammathur/setup-php@master
       with:
         php-version: 7.3
-        extension-csv: mbstring, xdebug, intl, fileinfo
+        extension-csv: mbstring, xdebug, intl, fileinfo, mysql
         
     - name: versions of everything
       shell: powershell
