--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -6,6 +6,11 @@ jobs:
   build:
 
     runs-on: windows-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: ""
     
     steps:
     - uses: actions/checkout@v1
@@ -33,9 +38,9 @@ jobs:
 
     - name: Run tests
       run: vendor/bin/phpunit vendor/silverstripe/admin/tests/php
-      env:
-        SS_DATABASE_CLASS: MySQLDatabase
-        SS_DATABASE_USERNAME: root
-        SS_DATABASE_PASSWORD: root
-        SS_DATABASE_CHOOSE_NAME: true
-        SS_DATABASE_SERVER: "127.0.0.1"
+#       env:
+#         SS_DATABASE_CLASS: MySQLDatabase
+#         SS_DATABASE_USERNAME: root
+#         SS_DATABASE_PASSWORD: root
+#         SS_DATABASE_CHOOSE_NAME: true
+#         SS_DATABASE_SERVER: "127.0.0.1"
